fix: fix overflow on main app component

--- a/GUI/ETVR/src/styles/index.css
+++ b/GUI/ETVR/src/styles/index.css
@@ -52,7 +52,6 @@ body {
     font-family: 'Ubuntu', sans-serif;
     cursor: default;
     background-color: transparent !important;
-    /*   color: #0b0c10; */
     width: 100%;
     height: 100%;
     text-align: center;
@@ -60,7 +59,6 @@ body {
 }
 
 .App {
-    color: #0b0c10;
     text-align: center;
     height: 100vh;
     display: flex;
